[package]
name = "graph_build"
version = "0.1.0"
authors = ["Gyula Gubacsi <gyula.gubacsi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"

[[bin]]
name = "gb"
path = "src/main.rs"

[[bin]]
name = "testing"
path = "src/testing.rs"